--- a/opinionproject/templates/bottom.html
+++ b/opinionproject/templates/bottom.html
@@ -6,11 +6,22 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </head>
-<body style="background-color: #cdb4db;">
-    {% include 'Navbar.html' %}
+<body>
+    <nav class="navbar fixed-bottom bg-dark" style="border-top-left-radius: 40%;" >
+        <div>
+          <h1 style="color: #cdb4db;font-family: Comic Sans MS; font-size: 4pc;">Opinion's...</h1>
+        </div>
+
+        <div>
+            <a href="https://github.com/SuryanshMaurya/DjangoP1" style="border-radius: 50%;">
+                <img style="background-color: white;border-radius: 50%; width: 50px;" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="">
+            </a>
+        </div>
 
 
-    {%include 'bottom.html'%}
+    </nav>
+      
 </body>
 </html>
