--- a/opinionproject/templates/Navbar.html
+++ b/opinionproject/templates/Navbar.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 
@@ -19,9 +20,53 @@
         </div>
     
         <div class="d-flex justify-content-end">
-            <button type="button" style="border-color: transparent; background-color: transparent;">
+            <button type="button" class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="border-color: transparent; background-color: transparent;">
                 <img style="border-radius: 50%;height: 5pc;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQcYdMvctNeux05bXpLg-2mvh03tM6-FyFZQ&s" alt="Empty" class="rounded-circle">
             </button>
+
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" style="background-color: #cdb4db;">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasRightLabel"  style="color: black; font-size: 50px; text-decoration: none; font-family: Comic Sans MS;"><img style="border-radius: 50%;height: 5pc;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQcYdMvctNeux05bXpLg-2mvh03tM6-FyFZQ&s" alt="Empty" class="rounded-circle"> Opinion's</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body" style="background-color: #217B7E;">
+                    <div >
+
+                        
+                        <a href="" title="Home" style="text-decoration: none;font-family: Comic Sans MS;color: black;font-size: 30px; "><i class="bi bi-house-heart"></i>  Home</a>
+                        
+                    </div>
+                    <br>
+                    <div>
+                        <a href="" title="Message" style="text-decoration: none;font-family: Comic Sans MS;color: black;font-size: 30px;"><i class="bi bi-chat-heart"></i>  Message</a>
+                    </div>
+                    <br>
+                    <div>
+                        <a href="" title="Explore" style="text-decoration: none;font-family: Comic Sans MS;color: black;font-size: 30px;"><i class="bi bi-search-heart"></i>  Explore</a>
+
+                    </div>
+                    <br>
+                    <div>
+                        <a href="" title="Notifications" style="text-decoration: none;font-family: Comic Sans MS;color: black;font-size: 30px;"><i class="bi bi-app-indicator"></i>  Notifications</a>
+
+                    </div>
+                    <br>
+                    <div>
+                        <a href="" title="Profile" style="text-decoration: none;font-family: Comic Sans MS;color: black;font-size: 30px;"><i class="bi bi-person-badge"></i>  Profile</a>
+
+                    </div>
+                    <br>
+                    <div>
+                        <a href="" title="Settings" style="text-decoration: none;font-family: Comic Sans MS;color: black;font-size: 30px;"><i class="bi bi-gear"></i>  Settings</a>
+
+                    </div>
+                    <br>
+                    <div>
+                        <a href="" title="LogOut" style="text-decoration: none;font-family: Comic Sans MS;color: red;font-size: 30px;"><i class="bi bi-door-closed"></i>  LogOut</a>                  
+
+                    </div>
+                </div>
+            </div>
         </div>
     </nav>
 
