create new footer and display data on home page

--- a/opinionproject/templates/Navbar.html
+++ b/opinionproject/templates/Navbar.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 
-    <nav class="navbar border-bottom border-body" style="background-color: #217B7E;">
+    <nav class="navbar border-bottom border-body" style="background-color: #461686;">
         <div>
-            <button type="button" class="btn btn-outline-dark">Your Opinion Time</button>
+            <button type="button" class="btn btn-outline-light text-white">Your Opinion Time</button>
         </div>
     
         <div >
-            <a href="index.html" style="color: black; font-size: 50px; text-decoration: none; font-family: Comic Sans MS;">Opinion's</a>        
+            <a href="index.html" style="color: rgb(255, 255, 255); font-size: 50px; text-decoration: none; font-family: Comic Sans MS;">Opinion's</a>        
         </div>
     
         <div class="d-flex justify-content-end">
