some addons to display data successfully
some addons to display data successfully

--- a/opinionproject/templates/index.html
+++ b/opinionproject/templates/index.html
@@ -11,8 +11,7 @@
 
     {% include 'Navbar.html' %}
 
-    <!-- Main Content -->
-    <div class="container mt-4">
+    <div class="container mt-4" style="min-height: 100vh;">
         <div class="row justify-content-center">
             <div class="col-md-6">
                 {% for opinion in opinion %}
