--- a/opinionproject/templates/post.html
+++ b/opinionproject/templates/post.html
@@ -8,29 +8,31 @@
 </head>
 
 <body>
-    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background-color: rgb(238, 238, 238);">
-        <div style="background-color: white; padding: 20px; width: 50%; min-width: 350px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+    {% include 'Navbar.html' %}
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #070031;">
+        <div style="background-color: black; color: white; padding: 20px; width: 50%; min-width: 350px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
             <h1 style="text-align: center;">Create Post</h1>
             <form method="post" enctype="multipart/form-data" style="display: flex; flex-direction: column; gap: 10px;">
                 {% csrf_token %}
                 <label for="title" style="font-weight: bold;">Title:</label>
-                <input type="text" id="title" name="title"
-                    style="padding: 5px; border: 1px solid #ccc; border-radius: 4px;">
+                <input type="text" id="title" name="title" placeholder="Enter title" required
+                    style="background-color: black; color: gray; padding: 5px; border: 1px solid #ccc; border-radius: 4px;">
 
                 <label for="message" style="font-weight: bold;">Message:</label>
-                <textarea id="message" name="message" rows="4"
-                    style="padding: 5px; border: 1px solid #ccc; border-radius: 4px;"></textarea>
+                <textarea id="message" name="message" rows="4" placeholder="Enter your message" required
+                    style="background-color: black; color: gray; padding: 5px; border: 1px solid #ccc; border-radius: 4px;"></textarea>
 
                 <label for="image" style="font-weight: bold;">Image:</label>
-                <input type="file" id="image" name="image" style="padding: 5px;">
+                <input type="file" id="image" name="image" style="background-color: black; color: white; padding: 5px;">
 
                 <button type="submit"
-                    style="padding: 10px; background-color: #007BFF; color: white; border: none; border-radius: 4px; cursor: pointer;">
+                    style="padding: 10px; background-color:  #461686; color: white; border: none; border-radius: 4px; cursor: pointer;">
                     Submit
                 </button>
             </form>
         </div>
     </div>
+    {% include 'bottom.html' %}
 </body>
 
 </html>
